--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 boto3==1.34.136
 botocore==1.34.136
 Django==5.0.6
+django-cors-headers==4.4.0
 django-environ==0.11.2
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
